--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="business.html">For&nbsp;Businesses</a></li>
         <li><a href="verify.html">Verify&nbsp;Product</a></li>
+                    <li><button id="connect-btn" class="connect-btn">Connect Wallet</button>/li>
       </ul>
     </nav>
   </header>
@@ -57,5 +58,6 @@
   <footer>
     <p>&copy; 2025 BizTrack.xrp – Built for decentralized product tracking. Inspired by VeChain’s supply chain innovations that track quality, authenticity and logistics data across the full product journey【948708967991131†L388-L400】.</p>
   </footer>
+</<script src="js/wallet.js"></script>
 </body>
 </html>
