--- a/business.html
+++ b/business.html
@@ -19,9 +19,10 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="business.html" class="active">For&nbsp;Businesses</a></li>
         <li><a href="verify.html">Verify&nbsp;Product</a></li>
+            <li><button id="connect-btn" class="connect-btn">Connect Wallet</button></li>
       </ul>
     </nav>
-  </header>
+   </header>
 
   <main class="container business-page">
     <section class="intro">
@@ -104,6 +105,8 @@
     preview.innerHTML = '';
     preview.appendChild(canvas);
   });
-  </script>
+</script>
+<script src="js/wallet.js"></script>
 </body>
+</htm</html>
 </html>
