--- a/verify.html
+++ b/verify.html
@@ -19,6 +19,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="business.html">For&nbsp;Businesses</a></li>
         <li><a href="verify.html" class="active">Verify&nbsp;Product</a></li>
+                <li><button id="connect-btn" class="connect-btn">Connect Wallet</button></li>
       </ul>
     </nav>
   </header>
@@ -37,5 +38,6 @@
     <p>&copy; 2025 BizTrack.xrp – Empowering consumers with transparency.</p>
   </footer>
   <script src="js/verify.js"></script>
+      <script src="js/wallet.js"></scrpt>
 </body>
 </html>
