Add XUMM PKCE SDK script to index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <footer>
     <p>&copy; 2025 BizTrack.xrp – Built for decentralized product tracking. Inspired by VeChain’s supply chain innovations that track quality, authenticity and logistics data across the full product journey【948708967991131†L388-L400】.</p>
   </footer>
+  <script src="https://xumm.app/assets/cdn/xumm-oauth2-pkce.min.js"></sript>
 </<script src="js/wallet.js"></script>
 </body>
 </html>
