Add XUMM PKCE SDK script to business.html

--- a/business.html
+++ b/business.html
@@ -106,6 +106,7 @@
     preview.appendChild(canvas);
   });
 </script>
+<s<script src="https://cdn.jsdelivr.net/npm/xumm-oauth2-pkce@2.8.7/dist/index.umd.js"></script>
 <script src="js/wallet.js"></script>
 </body>
 </htm</html>
