Add XUMM PKCE SDK script to verify.html

--- a/verify.html
+++ b/verify.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BizTrack.xrp – Verify Product</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https ://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -38,6 +38,7 @@
     <p>&copy; 2025 BizTrack.xrp – Empowering consumers with transparency.</p>
   </footer>
   <script src="js/verify.js"></script>
-      <script src="js/wallet.js"></scrpt>
+   <script src="https://cdn.jsdelivr.net/npm/xumm-oauth2-pkce@2.8.7/dist/index.umd.js"></script>
+   <script src="js/wallet.js"></scrpt>
 </body>
 </html>
