--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="business.html">For&nbsp;Businesses</a></li>
         <li><a href="verify.html">Verify&nbsp;Product</a></li>
+                <li><a href="login.html">Login</a></li>
+                  <
                     <li><button id="connect-btn" class="connect-btn">Connect Wallet</button>/li>
+                    
       </ul>
     </nav>
   </header>
