Add link to dashboard in dashboard section

--- a/login.html
+++ b/login.html
@@ -191,6 +191,7 @@
         <p id="twofaInfo" class="success"></p>
       </div>
       <p>This is a demo interface showing how businesses might log into BizTrack to manage their supply-chain NFTs on XRPL. In a full product, you could show additional menus here to mint product IDs, view tracking events or manage subscription payments.</p>
+           <p><a href="dashboard.html">Go to your dashboard</a></p>p>
     </div>
   </div>
 
